Added copyright name

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -153,7 +153,7 @@
 
         <footer style="margin-top:2em; margin-bottom:2em;">
         <hr>
-            &copy; Copyright 2022 [Your Name Here] |
+            &copy; Copyright 2022 Krishna Nair |
             <a href="https://github.com/prof-rossetti/internet-technologies">source</a>
 
         </footer>
