--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,36 @@
 <h1>About Me</h1>
 
 <p>This is the about page... </p>
+
+<div id="slides" class="carousel slide" data-ride="carousel">
+    <ul class="carousel-indicators">
+      <li data-target="#slides" data-slide-to="0" class="active"></li>
+      <li data-target="#slides" data-slide-to="1"></li>
+    </ul>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/Stocks.png">
+        <div class="carousel-caption">
+          <h1 class="display-2">Check Stocks</h1>
+          <h3>You have come to the right place!
+    
+          </h3>
+          <a href="Activities.html">
+          <button type="button" class="btn btn-primary btn-lg">GET STARTED</button>
+        </a>
+        </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/Stocks.png">
+          <div class="carousel-caption">
+            <h1 class="display-2">Order Products</h1>
+              
+              <a href="Activities.html">
+                <button type="button" class="btn btn-primary btn-lg">GET STARTED</button>
+              </a>
+          </div>
+          </div>
+      </div>
+  
+    </div>
+  </div>
