added Alejandro's changes

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,35 +2,48 @@
 
 <p>This is the about page... </p>
 
-<div id="slides" class="carousel slide" data-ride="carousel">
-    <ul class="carousel-indicators">
-      <li data-target="#slides" data-slide-to="0" class="active"></li>
-      <li data-target="#slides" data-slide-to="1"></li>
-    </ul>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/Stocks.png">
-        <div class="carousel-caption">
-          <h1 class="display-2">Check Stocks</h1>
-          <h3>You have come to the right place!
-    
-          </h3>
-          <a href="Activities.html">
-          <button type="button" class="btn btn-primary btn-lg">GET STARTED</button>
-        </a>
+
+<h1><%= message %></h1>
+<p>Click on the name to see their individual website and their picture to see their full Linkedin profile</p>
+<div class="container px-4 px-lg-5 text-center">
+    <h2 class="text-center mt-0">Meet our Team</h2>
+    <hr class="line" />
+    <div class="row gx-4 gx-lg-5">
+        <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+                <div class="mb-2">
+                    <p><a href="https://www.linkedin.com/in/krishnadas-m-nair/"><img src="img/krishna.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
+                </div>
+                <h3 class="h4 mb-2">Krishna Nair</h3>
+                <a href="https://acuevap.github.io/website-project-VC/">Personal Website</a>
+            </div>
         </div>
+        <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+                <div class="mb-2">
+                    <p><a href="https://www.linkedin.com/in/trivenigubbala/"><img src="img/triveni.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
+                </div>
+                <h3 class="h4 mb-2">Triveni Gubbala</h3>
+                <a href="https://acuevap.github.io/website-project-VC/">Personal Website</a>
+            </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/Stocks.png">
-          <div class="carousel-caption">
-            <h1 class="display-2">Order Products</h1>
-              
-              <a href="Activities.html">
-                <button type="button" class="btn btn-primary btn-lg">GET STARTED</button>
-              </a>
-          </div>
-          </div>
-      </div>
-  
+        <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+                <div class="mb-2">
+                    <p><a href="https://www.linkedin.com/in/camilo-atala/"><img src="img/camilo.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
+                </div>
+                <h3 class="h4 mb-2">Camilo Atala</h3>
+                <a href="https://acuevap.github.io/website-project-VC/">Personal Website</a>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+                <div class="mb-2">
+                    <p><a href="https://www.linkedin.com/in/alejandrocueva/"><img src="img/alejandro.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
+                </div>
+                <h3 class="h4 mb-2">Alejandro Cueva</h3>
+                <p><a href="https://acuevap.github.io/website-project-VC/"><img src="img/github.png" alt="Linkedin" height="50" width="75"></img></a></p>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
