--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,10 +1,5 @@
-<h1>About Me</h1>
-
-<p>This is the about page... </p>
 
 
-
-<p>Click on the name to see their individual website and their picture to see their full Linkedin profile</p>
 <div class="container px-4 px-lg-5 text-center">
     <h2 class="text-center mt-0">Meet our Team</h2>
     <hr class="line" />
@@ -12,37 +7,37 @@
         <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
                 <div class="mb-2">
-                    <p><a href="https://www.linkedin.com/in/krishnadas-m-nair/"><img src="img/krishna.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
+                    <p><a href="https://www.linkedin.com/in/krishnadas-m-nair/"><img src="images/krishna.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
                 </div>
                 <h3 class="h4 mb-2">Krishna Nair</h3>
-                <a href="https://acuevap.github.io/website-project-VC/">Personal Website</a>
+                <a href="https://kn516.github.io/Outdoor-Scheduler/">Personal Website</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
                 <div class="mb-2">
-                    <p><a href="https://www.linkedin.com/in/trivenigubbala/"><img src="img/triveni.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
+                    <p><a href="https://www.linkedin.com/in/trivenigubbala/"><img src="images/triveni.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
                 </div>
                 <h3 class="h4 mb-2">Triveni Gubbala</h3>
-                <a href="https://acuevap.github.io/website-project-VC/">Personal Website</a>
+                <a href="https://triv17.github.io/Triveni-Gubbala/">Personal Website</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
                 <div class="mb-2">
-                    <p><a href="https://www.linkedin.com/in/camilo-atala/"><img src="img/camilo.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
+                    <p><a href="https://www.linkedin.com/in/camilo-atala/"><img src="images/camilo.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
                 </div>
                 <h3 class="h4 mb-2">Camilo Atala</h3>
-                <a href="https://acuevap.github.io/website-project-VC/">Personal Website</a>
+                <a href="https://camiloatala.github.io/Geoodyssey/">Personal Website</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
                 <div class="mb-2">
-                    <p><a href="https://www.linkedin.com/in/alejandrocueva/"><img src="img/alejandro.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
+                    <p><a href="https://www.linkedin.com/in/alejandrocueva/"><img src="images/alejandro.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
                 </div>
                 <h3 class="h4 mb-2">Alejandro Cueva</h3>
-                <p><a href="https://acuevap.github.io/website-project-VC/"><img src="img/github.png" alt="Linkedin" height="50" width="75"></img></a></p>
+                <p><a href="https://acuevap.github.io/website-project-VC/"><img src="images/github.png" alt="Linkedin" height="50" width="75"></img></a></p>
             </div>
         </div>
     </div>
