some minor edits

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -37,7 +37,8 @@
                     <p><a href="https://www.linkedin.com/in/alejandrocueva/"><img src="images/alejandro.jpg" alt="Linkedin" height="230" width="230"></img></a></p>
                 </div>
                 <h3 class="h4 mb-2">Alejandro Cueva</h3>
-                <p><a href="https://acuevap.github.io/website-project-VC/"><img src="images/github.png" alt="Linkedin" height="50" width="75"></img></a></p>
+                <a href="https://acuevap.github.io/website-project-VC/">Personal Website</a>
+                
             </div>
         </div>
     </div>
