Copyright credits updated

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -119,7 +119,7 @@
 
         <footer style="margin-top:2em; margin-bottom:2em;">
         <hr>
-            &copy; Copyright 2022 Krishna Nair |
+            &copy; Copyright 2022 Alejandro Cueva | Triveni Gubbala | Camilo Atala | Krishna Nair
             <a href="https://github.com/prof-rossetti/internet-technologies">source</a>
 
         </footer>
