--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -1,3 +1,57 @@
-<h1><%= message %></h1>
+<link href="style.css" rel="stylesheet" />
 
-<p>This is the hello page... </p>
+
+
+
+<header class="masthead">
+    <div class="container px-4 px-lg-5 h-100">
+       
+
+        <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+            <div class="col-lg-8 align-self-end">
+                <h1 class="text-white font-weight-bold">Power your day by learning latest stock information and ordering your lifestyle essentials</h1>
+                <hr class="divider" />
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+                <p class="text-white-75 mb-5">Get all you need from one place!</p>
+                <a class="btn btn-primary btn-xl" href="#products">Explore Below</a>
+            </div>
+        </div>
+    </div>
+</header>
+
+<div id="products">
+  <div class="container px-4 px-lg-5 text-center">
+    <h2 class="text-center mt-0">Our Products and Services</h2>
+    <hr class="line" />
+     <div class="row gx-4 gx-xl-5 offset-lg-2">
+        <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+                <div class="mb-2">
+                    <p><a href="about"><img src="images/team.png" alt="Meet the Team" height="150" width="150"></img></a></p>
+                </div>
+                <h3 class="h4 mb-2">Who are we?</h3>
+                <h6 class="h6 mb-2">Come meet our outstanding management team that made this application possible and available for everyone. </h6>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+                <div class="mb-2">
+                    <p><a href="stocks/form"><img src="images/Stocks icon.png" alt="Research" height="150" width="150"></img></a></p>
+                </div>
+                <h3 class="h4 mb-2">Live Stock Charts</h3>
+                <h6 class="h6 mb-2">Do your stock market research to reach your financial goals. </h6>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+                <div class="mb-2">
+                    <p><a href="products"><img src="images/Shopping cart.png" alt="Shop now" height="150" width="150"></img></a></p>
+                </div>
+                <h3 class="h4 mb-2">Products</h3>
+                <h6 class="h6 mb-2">Shop for your favorite products to be delivered to your home or office</h6>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
