--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -9,16 +9,30 @@
 
         <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
             <div class="col-lg-8 align-self-end">
-                <h1 class="text-white font-weight-bold">Power your day by learning latest stock information and ordering your lifestyle essentials</h1>
+                <h1 class="text-black font-weight-bold">Power your day by learning latest stock information and ordering your lifestyle essentials</h1>
                 <hr class="divider" />
             </div>
             <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 mb-5">Get all you need from one place!</p>
+                <p class="text-black">Get all you need in one place!</p>
                 <a class="btn btn-primary btn-xl" href="#products">Explore Below</a>
             </div>
         </div>
     </div>
 </header>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 
 <div id="products">
   <div class="container px-4 px-lg-5 text-center">
