--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -1,5 +1,15 @@
 <link href="style.css" rel="stylesheet" />
 
+<!-- Background image -->
+<div class="container remove-padding">
+    
+<div
+class="bg-image"
+  style="
+    background-image: url('images/background.jpeg');
+    height: 100vh;
+  "
+>
 
 
 
@@ -9,11 +19,11 @@
 
         <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
             <div class="col-lg-8 align-self-end">
-                <h1 class="text-black font-weight-bold">Power your day by learning latest stock information and ordering your lifestyle essentials</h1>
+                <h1 class="text-white font-weight-bold">Power your day by learning latest stock information and ordering your lifestyle essentials</h1>
                 <hr class="divider" />
             </div>
             <div class="col-lg-8 align-self-baseline">
-                <p class="text-black">Get all you need in one place!</p>
+                <p class="text-white">Get all you need in one place!</p>
                 <a class="btn btn-primary btn-xl" href="#products">Explore Below</a>
             </div>
         </div>
@@ -32,6 +42,12 @@
 <br>
 <br>
 <br>
+
+</div>
+<!-- Background image -->
+
+    
+  </div>
 
 
 <div id="products">
