--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -13,7 +13,7 @@ class="bg-image"
 
 
 
-<header class="masthead">
+
     <div class="container px-4 px-lg-5 h-100">
        
 
@@ -28,14 +28,9 @@ class="bg-image"
             </div>
         </div>
     </div>
-</header>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+
 <br>
 <br>
 <br>
@@ -48,6 +43,10 @@ class="bg-image"
 
     
   </div>
+   <div>
+       <br>
+       <br>
+   </div>
 
 
 <div id="products">
