Source and renamed hello page to home page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -66,7 +66,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/hello">Hello</a>
+                        <a class="nav-link" href="/home">Home</a>
                     </li>
 
 
@@ -122,7 +122,7 @@
         <footer style="margin-top:2em; margin-bottom:2em;">
         <hr>
             &copy; Copyright 2022 Alejandro Cueva | Triveni Gubbala | Camilo Atala | Krishna Nair
-            <a href="https://github.com/prof-rossetti/internet-technologies">source</a>
+            <a href="https://github.com/kn516/Final-Group-Project.git">source</a>
 
         </footer>
     </div>
